# TavaraLogDemo

./: Cargo.toml  README.md  config.toml  log.txt
src/: beep.rs  configuration_file.rs  main.rs  main_window.rs  scanner.rs
src/views/: add_object_view.rs  add_student_view.rs  borrow_history_view.rs  cannot_return_object.rs  main_view.rs  mod.rs  object_not_borrowed.rs  object_return_view.rs  remove_object_view.rs  remove_student_view.rs  settings_view.rs  tagfound_view.rs
src/widgets/: mod.rs  spacer.rs
